# flaskapp/api/auth.py
@@ -1,3 +1,4 @@
+from os import getenv
 import logging.config
 from flask import Blueprint, jsonify, request, current_app, make_response
 
@@ -5,7 +6,8 @@ from flask_cors import cross_origin
 
 from extensions.token_utils import (refresh_token_required,
                                     generate_access_token,
-                                    generate_refresh_token)
+                                    generate_refresh_token,
+                                    decode_token)
 from extensions.db import get_conn
 
 blueprint = Blueprint(
@@ -19,7 +21,26 @@ blueprint = Blueprint(
 @refresh_token_required
 def get_access_token():
     # Busca o user_id nos cookies
-    user_id = request.cookies.get('user_id')
+    # user_id = request.cookies.get('user_id')
+
+    get_token = request.headers.get('Authorization')
+    if (get_token == None):
+        message = 'Token Nulo'
+        current_app.logger.warning(f"{request.remote_addr.__str__()} - {__name__}: {message}")
+        return jsonify({
+            'ACK': False,
+            'message':message
+        })
+    
+    token = get_token.split()[-1]
+    get_payload = decode_token(token, getenv('JWT_REFRESH_SECRET'))
+    payloadData = dict(get_payload.json)
+    if payloadData.get('ACK') == False:
+        return jsonify(payloadData)
+    
+    payload = payloadData.get('payload')
+    
+    user_id = payload.get('user_id')
 
     return jsonify({
         'ACK': True,
@@ -65,6 +86,7 @@ def auth():
             'token': refresh_token
         }))        
         response.set_cookie(key='user_id', value=username, httponly=True)
+        response.set_cookie(key='refresh_token', value=refresh_token, httponly=True)
         return response
         
     current_app.logger.warning(f"{request.remote_addr.__str__()} - {__name__}: Usuário ou senha inválidos")
